--- a/web/moderator.xhtml
+++ b/web/moderator.xhtml
@@ -133,6 +133,7 @@
                         </h:panelGroup>
                     </h:form>
                 </div>
+                <div style="padding-bottom: 20px"></div>
             </ui:define>
         </ui:composition>
     </h:body>
