Putting it all together (2)

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -15,11 +15,11 @@
             </ui:define>
 
             <ui:define name="heading">
-                <ui:include src="/templates/login/header.xhtml" />
+                <ui:include src="/templates/admin/header.xhtml" />
             </ui:define>
 
             <ui:define name="content">
-                <div class="container">
+                <div class="container-fluid">
                     <style>
                         .form-singin {
                             max-width: 750px;
