--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -63,7 +63,7 @@
 
 
                         <h:commandButton class="btn btn-lg btn-primary btn-block" value="#{message.loginTitle}" action="#{login.process}" />
-                        <span class="reg"><h:link outcome="register">Don't have an account? Register here!</h:link></span>
+                        <span class="reg">Don't have an account? <h:link outcome="register">Register here!</h:link> or <h:link outcome="home">Continue as Guest</h:link></span>
                     </h:form>
 
                 </div>
